<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/actionMainNewMessage"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/send_message"/> 
    
    <item
        android:id="@+id/actionMainNewFace"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/new_face"/> 
        
    <item
        android:id="@+id/actionMainLogout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout"/> 
        
    <item 
        android:id="@+id/menu_share" 
        android:title="Share" 
        android:icon="@android:drawable/ic_menu_share" 
        android:showAsAction="never" 
        android:enabled="true"
        android:actionProviderClass="android.widget.ShareActionProvider"/> 


</menu>
