<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1fb2b9"
    tools:context=".RegisterUser" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/registerUserBoxFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box_white"
            android:padding="8dp" >

            <EditText
                android:id="@+id/registerUserTxtFirstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/registerUserBoxLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerUserBoxFirstName"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box_white"
            android:padding="8dp" >

            <EditText
                android:id="@+id/registerUserTxtLastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/registerUserBoxUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerUserBoxLastName"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box_white"
            android:padding="8dp" >

            <EditText
                android:id="@+id/registerUserTxtUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/registerUserBoxPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerUserBoxUsername"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/box_white"
            android:padding="8dp" >

            <EditText
                android:id="@+id/registerUserTxtPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/registerUserBoxBoxRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerUserBoxPassword"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:padding="8dp" >

            <Button
                android:id="@+id/registerUserBtnRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="#ffffff" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>